# 42shell_mirror

./: .coveralls.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .header  21sh.drawio  Grammar  LICENSE  Makefile  README.md  ThePlan.plan  author  job_control_structure  meson.build
ft_printf/: Makefile  ft_printf.h
ft_printf/Source_files/: ft_asprintf.c  ft_dispatcher.c  ft_dprintf.c  ft_init_info.c
ft_printf/libft/: ft_atoll.c  ft_isspace.c  ft_memccpy.c  ft_memchr.c  ft_memexpand.c  ft_memset.c  ft_nbrlenbase.c  ft_nbrlenbase_ull.c  ft_print_str_array.c  ft_str_arr_len.c  ft_strcharexpand.c  ft_strcmp.c  ft_strdup.c  ft_strexpand.c  ft_strlen.c  ft_strndup.c  ft_strstr.c  ft_ulltoa_base_low.c  ft_ulltoa_base_upp.c  get_next_line.c  libft.h
inc/: TEMP_print_token_parse.h  arimath.h  arimath_fsm.h  autocomplete.h  builtins.h  builtins_list.h  cetushell.h  configure_terminal.h  controls_shell.h  environment.h  error_str.h  executor.h  handle_error.h  handle_input.h  hashtable.h  headerlist  history.h  input_control.h  input_handling.h  job_control.h  op_ident_chart.h  parser.h  parser_structs.h  parser_utils.h  processing.h  prompt.h  prompt_str.h  quote_trans_table.h  shell21.h  signal_handler.h  substitution.h  temp_print_token_parse.h  terminal.h  test_expressions.h  token_trans_table.h  tokenizer.h  utils.h  vecstr.h
scripts/: addheader  meson-norm.sh  test_script.csh
src/: 42shsrcs  TEMP_print_token_parse.c  buffer.c  buffer.spec.c  buffer_control.c  buffer_control.spec.c  configure_terminal.c  controls.c  convert_env_to_envp.spec.c  cursor.c  cursor_control.c  cut_copy.c  cut_copy.spec.c  escape_controls.c  escape_controls_1.c  escape_controls_2.c  expand_variable.c  expand_variable.spec.c  foo_test.c  foo_test.spec.c  free_token_list.c  free_token_list.spec.c  ft_getenv.c  ft_getenv.spec.c  ft_setenv.spec.c  ft_unsetenv.spec.c  handle_control.c  handle_cursor.c  handle_error.c  handle_error.spec.c  handle_input.c  handle_input.spec.c  main.c  parse_arguments.c  parse_arguments.spec.c  parse_complete_command.c  parse_complete_command.spec.c  parse_io.c  parse_io_file.c  parse_io_file.spec.c  (+25 more)
src/arimath/: arithmatic_add_token.c  arithmatic_associate_prefixes.c  arithmatic_basic_actions.c  arithmatic_comparison_actions.c  arithmatic_delete_tokens.c  arithmatic_equality_actions.c  arithmatic_expansion.c  arithmatic_getint_from_env.c  arithmatic_lexer.c  arithmatic_remove_token.c  arithmatic_run_crementers.c  arithmatic_run_math_operations.c  operator_ident_chart.c
src/autocomplete/: auto_complete.c  auto_complete_init.c  auto_complete_init.spec.c  auto_complete_insert.c  auto_complete_lists.c  auto_complete_lists.spec.c  complete_builtin.c  complete_exec.c  complete_files.c  complete_utils.c  complete_var.c
src/builtins/: binary_expression.c  builtin_bg.c  builtin_bg.spec.c  builtin_cd.c  builtin_cd.spec.c  builtin_cd_setget.c  builtin_echo.c  builtin_echo.spec.c  builtin_env.c  builtin_env.spec.c  builtin_env_1.c  builtin_env_2.c  builtin_exit.c  builtin_exit.spec.c  builtin_export.c  builtin_export.spec.c  builtin_fg.c  builtin_fg.spec.c  builtin_hash.c  builtin_hash.spec.c  builtin_jobs.c  builtin_jobs.spec.c  builtin_set.c  builtin_set.spec.c  builtin_setvar.c  builtin_setvar.spec.c  builtin_test.c  builtin_test.spec.c  builtin_type.c  builtin_type.spec.c  builtin_unset.c  builtin_unset.spec.c  builtins.c  builtins.spec.c  builtins_1.c  builtins_1.spec.c  builtins_2.c  builtins_env.c  builtins_utils.c  builtins_utils.spec.c  (+3 more)
src/environment/: convert_env_to_envp.c  convert_env_to_envp.spec.c  dup_sys_env.c  dup_sys_env.spec.c  expand_home.c  expand_variable.c  expand_variable.spec.c  free_env_list.c  ft_getenv.c  ft_getenv.spec.c  ft_setenv.c  ft_setenv.spec.c  ft_setstatus.c  ft_unsetenv.c  ft_unsetenv.spec.c  resolve_command_subst.c
src/executor/: add_fd_to_list.c  add_fd_to_list.spec.c  exec_complete_command.c  exec_complete_command.spec.c  exec_pipe_sequence.c  exec_pipe_sequence.spec.c  exec_simple_command.c  exec_simple_command.spec.c  find_executable.c  find_executable.spec.c  reset_redirections.c  set_up_io_file.c  set_up_io_file.spec.c  set_up_redirections.c  set_up_redirections.spec.c
src/hashtable/: hash_utils.c  hashtable.c  hashtable_list.c  initialize_hashpath.c
src/history/: cut_split_history.c  get_histfile.c  history.c  history_list.c  history_list.spec.c  history_list_1.c  history_list_2.c  history_utils.c  history_utils.spec.c  history_utils_1.c  history_utils_2.c  init_history.c  init_history_utils.c
src/job_control/: check_jobs.c  check_jobs.spec.c  clean_up_jobs.c  free_job_control.c  init_job_control.c  job_control_utils.c  job_list_utils.c  job_spec_match.c  job_spec_match.spec.c  print_job_status.c  update_job_status.c
src/lexer_parser/: parse_arguments.spec.c  parse_assignments.c  parse_assignments.spec.c  parse_complete_command.c  parse_complete_command.spec.c  parse_io_file.c  parse_io_here.c  parse_io_redirect.spec.c  parse_pipe_sequence.c  parse_simple_command.c  parse_simple_command.spec.c  parser_utils.c  parser_utils.spec.c  substitution.c  (+5 more)
subprojects/ft_printf/: ft_printf.h  meson.build
subprojects/ft_printf/Source_files/: ft_asprintf.c  ft_printf.c  ft_process_conversion.c  ft_snprintf.c  printfsources
subprojects/ft_printf/Source_files/Find_files/: ft_find_flags.c  ft_find_width.c
subprojects/ft_printf/Source_files/Format_files/csp_files/: ft_formatchar.c  ft_formatstring.c  ft_precision_string.c
subprojects/ft_printf/Source_files/Format_files/diouxX_files/: ft_format_decimal.c  ft_format_unsigneddecimal.c  ft_formatlonglong.c  ft_formatulllowhex.c  ft_formatulloctal.c
subprojects/ft_printf/Source_files/Write_files/: ft_write_flags.c  ft_writer_fd.c  ft_writer_string_n.c
subprojects/ft_printf/libft/: ft_atoll.c  ft_free_str_array.c  ft_getopt.c  ft_intlen.c  ft_itoa_base.c  ft_strcdup.c  ft_strcharjoin.c  ft_strjoin.c  ft_strnew.c  ft_strrev.c  ft_strsplit_t_s.c  ft_strtrim.c  ft_swap.c  get_next_line.c  libft.h  libftsources
temp/: histor_debug.c  temp_print_token_parse.c  token_parse_testmain.c
(+74 files in other folders)
