project(
  'libftprintf',
  'c',
  license: 'GPLv3',
  default_options: [
    'c_std=c99',
    'warning_level=3',
    'werror=true',
  ]
)

inc_dir = include_directories('.')
src_files = files([
  'Source_files/Find_files/ft_find_flags.c',
  'Source_files/Find_files/ft_find_lenmod.c',
  'Source_files/Find_files/ft_find_precision.c',
  'Source_files/Find_files/ft_find_width.c',
  'Source_files/Format_files/csp_files/ft_formatchar.c',
  'Source_files/Format_files/csp_files/ft_formatpointer.c',
  'Source_files/Format_files/csp_files/ft_formatstring.c',
  'Source_files/Format_files/csp_files/ft_precision_string.c',
  'Source_files/Format_files/diouxX_files/ft_format_decimal.c',
  'Source_files/Format_files/diouxX_files/ft_format_lowhex.c',
  'Source_files/Format_files/diouxX_files/ft_format_octal.c',
  'Source_files/Format_files/diouxX_files/ft_format_upphex.c',
  'Source_files/Format_files/diouxX_files/ft_formatlonglong.c',
  'Source_files/Format_files/diouxX_files/ft_formatlonglongunsigned.c',
  'Source_files/Format_files/diouxX_files/ft_formatulllowhex.c',
  'Source_files/Format_files/diouxX_files/ft_formatulloctal.c',
  'Source_files/Format_files/diouxX_files/ft_formatullupphex.c',
  'Source_files/Format_files/diouxX_files/ft_format_unsigneddecimal.c',
  'Source_files/Format_files/diouxX_files/ft_precision_int.c',
  'Source_files/Format_files/f_files/ft_format_float_utils.c',
  'Source_files/Format_files/f_files/ft_format_floats.c',
  'Source_files/Format_files/f_files/ft_precision_float.c',
  'Source_files/Format_files/f_files/ft_formatunsignedfloat.c',
  'Source_files/Format_files/ft_formatunknown.c',
  'Source_files/Write_files/ft_write_flags.c',
  'Source_files/Write_files/ft_write_order.c',
  'Source_files/Write_files/ft_write_width.c',
  'Source_files/Write_files/ft_writer_fd.c',
  'Source_files/Write_files/ft_writer_string_n.c',
  'Source_files/Write_files/ft_writer_alloc_str.c',
  'Source_files/Write_files/ft_write_middle_width.c',
  'Source_files/ft_dispatcher.c',
  'Source_files/ft_init_info.c',
  'Source_files/ft_printf.c',
  'Source_files/ft_dprintf.c',
  'Source_files/ft_snprintf.c',
  'Source_files/ft_asprintf.c',
  'Source_files/ft_process_conversion.c',
  'libft/ft_memset.c',
  'libft/ft_bzero.c',
  'libft/ft_memcpy.c',
  'libft/ft_memccpy.c',
  'libft/ft_memmove.c',
  'libft/ft_memchr.c',
  'libft/ft_memcmp.c',
  'libft/ft_strlen.c',
  'libft/ft_str_arr_len.c',
  'libft/ft_strdup.c',
  'libft/ft_strcdup.c',
  'libft/ft_strndup.c',
  'libft/ft_strcpy.c',
  'libft/ft_strncpy.c',
  'libft/ft_strcat.c',
  'libft/ft_strncat.c',
  'libft/ft_strlcat.c',
  'libft/ft_strchr.c',
  'libft/ft_strrchr.c',
  'libft/ft_strstr.c',
  'libft/ft_strnstr.c',
  'libft/ft_strcmp.c',
  'libft/ft_strncmp.c',
  'libft/ft_atoi.c',
  'libft/ft_atoll.c',
  'libft/ft_intlen.c',
  'libft/ft_isalpha.c',
  'libft/ft_isdigit.c',
  'libft/ft_isalnum.c',
  'libft/ft_isascii.c',
  'libft/ft_isprint.c',
  'libft/ft_isspace.c',
  'libft/ft_toupper.c',
  'libft/ft_tolower.c',
  'libft/ft_memalloc.c',
  'libft/ft_memdel.c',
  'libft/ft_strnew.c',
  'libft/ft_strdel.c',
  'libft/ft_strclr.c',
  'libft/ft_striter.c',
  'libft/ft_striteri.c',
  'libft/ft_strmap.c',
  'libft/ft_strmapi.c',
  'libft/ft_strequ.c',
  'libft/ft_strnequ.c',
  'libft/ft_strsub.c',
  'libft/ft_strjoin.c',
  'libft/ft_strtrim.c',
  'libft/ft_strsplit.c',
  'libft/ft_strsplit_t_s.c',
  'libft/ft_itoa.c',
  'libft/ft_putchar.c',
  'libft/ft_putstr.c',
  'libft/ft_putendl.c',
  'libft/ft_putnbr.c',
  'libft/ft_putchar_fd.c',
  'libft/ft_putstr_fd.c',
  'libft/ft_putendl_fd.c',
  'libft/ft_putnbr_fd.c',
  'libft/ft_lstnew.c',
  'libft/ft_lstdelone.c',
  'libft/ft_lstdel.c',
  'libft/ft_lstadd.c',
  'libft/ft_lstiter.c',
  'libft/ft_lstmap.c',
  'libft/ft_absneg.c',
  'libft/ft_abspos.c',
  'libft/ft_iswhitespace.c',
  'libft/ft_strlenc.c',
  'libft/ft_memrcpy.c',
  'libft/ft_memdup.c',
  'libft/ft_memcdup.c',
  'libft/ft_memjoin.c',
  'libft/ft_memexpand.c',
  'libft/ft_memdelsize.c',
  'libft/ft_nbrlenbase.c',
  'libft/ft_lstlen.c',
  'libft/ft_lstaddback.c',
  'libft/ft_lstaddnext.c',
  'libft/get_next_line.c',
  'libft/ft_free_str_array.c',
  'libft/ft_print_str_array.c',
  'libft/ft_strexpand.c',
  'libft/ft_strrev.c',
  'libft/ft_swap.c',
  'libft/ft_itoa_base.c',
  'libft/ft_ulltoa_base_upp.c',
  'libft/ft_ulltoa_base_low.c',
  'libft/ft_nbrlenbase_ull.c',
  'libft/ft_strcharjoin.c',
  'libft/ft_getopt.c',
])

libftprintf = static_library(
  'ftprintf',
  sources: src_files,
  include_directories: inc_dir,
)

external_inc_dir = include_directories('.')
libftprintf_deb = declare_dependency(
  link_with: libftprintf,
  include_directories: external_inc_dir,
)
